# cicd-agent

./: AGENT.md  CHARTER.md  DOCKSIDE-EXAM.md  README.md  cicd.py  cli.py  git_poller.py  pyproject.toml  reporter.py  test_runner.py  webhook_server.py
cicd_agent/: __init__.py  artifact.py  deploy.py  pipeline.py  stage.py  trigger.py
tests/: test_cicd_agent.py
